@@ -15,7 +15,6 @@ PlasmaTurretBuilding.sell_cost = 250;
 PlasmaTurretBuilding.sell_time = 6;
 PlasmaTurretBuilding.health_max = 400;
 PlasmaTurretBuilding.energy = 50;
-PlasmaTurretBuilding.enabled = false;
 PlasmaTurretBuilding.can_build = true;
 PlasmaTurretBuilding.crater = 0;
 PlasmaTurretBuilding.weapon = 'GatPlasma';
