@@ -1,5 +1,6 @@
 To do:
 	- Allow unit to shoot not only to the center of the building
+	- Add unit generation in progress sound
 
 - High priority bugs:
 
